hphp/hack/test/typecheck/class_pointers/syntactic_error.php.exp
ERROR: File "syntactic_error.php", line 13, characters 17-24:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 14, characters 18-25:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
